[package]
name = "vclock"
version = "0.4.2"
authors = ["Christian Mauduit (ufoot) <ufoot@ufoot.org>"]
edition = "2021"
description = "VClock is a vector clock."
keywords = ["vectorclock", "vector-clock", "vector", "clock"]
license = "MIT"
documentation = "https://docs.rs/crate/vclock"
homepage = "https://gitlab.com/liberecofr/vclock"
repository = "https://gitlab.com/liberecofr/vclock/tree/main"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
num-bigint = { version = "0.4", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
num-bigint = "0.4"

[features]
serde = ["dep:serde"]
bigint = ["dep:num-bigint"]

[package.metadata.docs.rs]
all-features = true